# webcam-ml

./: LICENSE  README.md  main.py  pyproject.toml
extensions/: __init__.py  only_bboxes.py  only_masks.py
webcam_ml/: __init__.py  capsule_runtime.py  video_stream.py
